@startuml
'https://plantuml.com/class-diagram

abstract class personne {
   nom
   prenom
   tel
   toString()
}

class stagiaire {
   adresse
   ville
   tel
}

class formateur {
     numeroIntervenant
     DateDeCreation
     <u>nbIntervenant</u>
 }

personne <|-- stagiaire
personne <|-- formateur
@enduml